OWS-203 : review comments